[package]
name = "svd-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-system"] }
plotters = { version = "0.3.1", default_features = false, features = ["svg_backend"] }
